<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/button_image"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@android:color/transparent"
                android:onClick="onAddImageClick">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/login_logo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        app:drawableBottomCompat="@drawable/ic_action_new" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/button_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@android:color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_action_person" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_action_person"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/surname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_action_date"
                android:ems="10"
                android:hint="@string/birthdate"
                android:onClick="onBirthdateClick"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/birthdate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:hint="@string/example_email"
                android:drawableStart="@drawable/ic_action_mail" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:inputType="textPhonetic"
                android:textSize="18sp"
                android:hint="@string/example_phone"
                android:drawableStart="@drawable/ic_action_phone" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_action_password" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="@string/confirm"
                android:drawableStart="@drawable/ic_action_password" />


            <androidx.cardview.widget.CardView
                android:id="@+id/signup"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/confirm"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/pink_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:onClick="onSignupClick">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/signup"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/button_cancel"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/blue_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:onClick="onCancelClick">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/cancel"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>