<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/login_logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_action_password" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            app:cardBackgroundColor="@color/pink_1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:onClick="onLoginClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_cancel"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="onSignupClick"
            app:cardBackgroundColor="@color/blue_1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>