<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".NewQuestionActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/text_question"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_action_exam_light"
                android:ems="10"
                android:hint="@string/enter_question"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_question"
                android:layout_alignParentStart="true"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/checkBoxA"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/white"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/checkBoxB"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/checkBoxC"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/checkBoxD"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/checkBoxE"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <EditText
                android:id="@+id/text_answer1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/text_question"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/answer1"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/text_answer2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/text_answer1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/answer2"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/text_answer3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/text_answer2"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/answer3"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/text_answer4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/text_answer3"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/answer4"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/text_answer5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/text_answer4"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/answer5"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@+id/text_answer5"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/add_image" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/add_image" />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_image"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/text_answer5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45dp"
                app:cardBackgroundColor="@color/menu_item_3"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:onClick="onAddImageClick">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/add_image"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/add_video"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/add_image"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/menu_item_3"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:onClick="onAddVideoClick">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/add_video"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/save"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/add_video"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45dp"
                app:cardBackgroundColor="@color/pink_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:onClick="onSaveClick" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/button_cancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@id/save"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/blue_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:onClick="onCancelClick" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@android:string/cancel"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>