<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ExamSettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/menu_item_2"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/exam_settings"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/set_exam_time"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/symbolTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textTime"
                app:drawableStartCompat="@drawable/ic_action_time" />

            <SeekBar
                android:id="@+id/seekTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTime"
                android:layout_toEndOf="@+id/symbolTime"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/level"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/set_exam_level"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/symbolLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textLevel"
                app:drawableStartCompat="@drawable/ic_action_level" />

            <SeekBar
                android:id="@+id/seekLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLevel"
                android:layout_toEndOf="@+id/symbolLevel"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/point"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/level"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/set_question_score"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/symbolPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textPoint"
                app:drawableStartCompat="@drawable/ic_action_point" />

            <EditText
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toEndOf="@+id/symbolPoint"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/textPoint"
                android:textAlignment="center"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/save"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/point"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:cardBackgroundColor="@color/pink_1"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:onClick="onSaveClick">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
